ml-app-of-apps/services/chat/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: chat-window-service
  name: chat
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: chat-window-service
    weight: 100
  wildcardPolicy: None
